--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             list-style: none;
         }
 
+        .shouye1{
+            background-image: url(./shouye.png);
+        }
         /* 全局控制 */
         body {
             font-family: "微软雅黑", Arial, Helvetica, sans-serif;
@@ -681,6 +684,8 @@
 </head>
 
 <body>
+    <!-- 首页-->
+     <div class="shouye1"><img src="./shouye.png" alt=""></div>
     <!-- 登录模态框 -->
     <div id="loginModal" class="modal">
         <div class="modal-content">
