--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
       <button class="btn-login">Log in</button>
       <button class="btn-signup">Sign up</button>
       <div class="nav-icons">
-        <span>🌐</span>
-        <span>⭐</span>
+        <span></span>
+        <span></span>
       </div>
     </div>
   </nav>
@@ -219,3 +219,12 @@
   </section>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
